// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossCheckComments Should render correctly if there are anonymous comments 1`] = `
<Col>
  <Row
    key="0"
  >
    <Divider />
    <Comment
      author="Student 1"
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              5
            </b>
          </p>
          <PreparedComment
            text="Awful job, you better quit programming and learn to cross stitch."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="1"
  >
    <Divider />
    <Comment
      author="Student 2"
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              5
            </b>
          </p>
          <PreparedComment
            text="Awful job, you better quit programming and learn to cross stitch."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="2"
  >
    <Divider />
    <Comment
      author="Student 3"
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              5
            </b>
          </p>
          <PreparedComment
            text="Awful job, you better quit programming and learn to cross stitch."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
</Col>
`;

exports[`CrossCheckComments Should render correctly if there are both types of comments 1`] = `
<Col>
  <Row
    key="0"
  >
    <Divider />
    <Comment
      author="Student 1"
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              5
            </b>
          </p>
          <PreparedComment
            text="Awful job, you better quit programming and learn to cross stitch."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="1"
  >
    <Divider />
    <Comment
      author="Student 2"
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              5
            </b>
          </p>
          <PreparedComment
            text="Awful job, you better quit programming and learn to cross stitch."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="2"
  >
    <Divider />
    <Comment
      author={
        <GithubUserLink
          value="torvalds"
        />
      }
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              100
            </b>
          </p>
          <PreparedComment
            text="Great job, you better quit cross stitching and start programming."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="3"
  >
    <Divider />
    <Comment
      author={
        <GithubUserLink
          value="torvalds"
        />
      }
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              100
            </b>
          </p>
          <PreparedComment
            text="Great job, you better quit cross stitching and start programming."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="4"
  >
    <Divider />
    <Comment
      author="Student 5"
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              5
            </b>
          </p>
          <PreparedComment
            text="Awful job, you better quit programming and learn to cross stitch."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
</Col>
`;

exports[`CrossCheckComments Should render correctly if there are signed comments 1`] = `
<Col>
  <Row
    key="0"
  >
    <Divider />
    <Comment
      author={
        <GithubUserLink
          value="torvalds"
        />
      }
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              100
            </b>
          </p>
          <PreparedComment
            text="Great job, you better quit cross stitching and start programming."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="1"
  >
    <Divider />
    <Comment
      author={
        <GithubUserLink
          value="torvalds"
        />
      }
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              100
            </b>
          </p>
          <PreparedComment
            text="Great job, you better quit cross stitching and start programming."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
  <Row
    key="2"
  >
    <Divider />
    <Comment
      author={
        <GithubUserLink
          value="torvalds"
        />
      }
      avatar={<ForwardRef(UserOutlined) />}
      content={
        <React.Fragment>
          <p>
            <b>
              Score: 
              100
            </b>
          </p>
          <PreparedComment
            text="Great job, you better quit cross stitching and start programming."
          />
        </React.Fragment>
      }
      style={
        Object {
          "margin": 16,
        }
      }
    />
  </Row>
</Col>
`;

exports[`CrossCheckComments Should render correctly if there's no comments 1`] = `""`;
